[package]
name = "mazes"
version = "0.1.0"
authors = ["CliffS <strohs1@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
# generating and drawing images, TBD
#image = "0.23.12"
#imageproc = "0.22.0"

# termion is for linux, mac_os only
# termion = "1.5.5"
